<resources>
    <string name="app_name">FileManager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_show_hidden_files">Show hidden files</string>
    <string name="action_not_show_hidden_files">Not show hidden files</string>
    <string name="action_delete">Delete</string>
    <string name="action_info">Info</string>
    <string name="action_mode_choose">Edit</string>
    <string name="action_new_folder">New folder</string>
    <string name="action_paste">Paste</string>

    <string name="msg_can_not_open_file">Can not open target file</string>
    <string name="msg_delete_items">Delete %s items?</string>
    <string name="msg_permission_denied">Request permission failed!</string>
    <string name="msg_have_not_choose_file">No file chosen</string>
    <string name="msg_choose_directory_to_move_files">Move %d files to</string>
    <string name="msg_choose_directory_to_copy_files">Copy %d files to</string>

    <string name="msg_folder_is_exist">This folder is exist</string>

    <string name="hint_input_new_folder_name">Input new folder name</string>
    <string name="hint_input_file_name_search">file name...</string>

    <string name="tv_file_sub_count">%s项</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="tv_file_type">File type</string>
    <string name="tv_file_path">File path</string>
    <string name="tv_file_size">File size</string>
    <string name="tv_file_last_modified">Last modified</string>
    <string name="tv_create_folder">Create a new folder</string>
    <string name="tv_delete_files">Delete %s files</string>
    <string name="tv_delete_sing_file">Delete \'%s\'</string>
    <string name="tv_file_info">File info</string>
    <string name="tv_multi_files">%s files</string>
    <string name="tv_multi_file_path">%1$s\n%2$s...</string>
    <string name="tv_file_size_calculating">Calculating...</string>
    <string name="tv_title_delete_files">Delete</string>

    <string name="tv_file_dir">folder</string>
    <string name="tv_opps">Opps...</string>
    <string name="tv_please_waiting">Please waiting...</string>
    <string name="tv_external_storage_title">External Storage: </string>
    <string name="tv_external_storage">%1$s / %2$s</string>

</resources>
