<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            style="@style/MyTextTheme.Medium"
            android:text="@string/tv_file_type"
            app:layout_widthPercent="30%" />
        <TextView
            android:id="@+id/file_type_tv"
            android:layout_alignParentEnd="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            style="@style/MyTextTheme.Medium"
            app:layout_widthPercent="70%"/>
    </android.support.percent.PercentRelativeLayout>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            style="@style/MyTextTheme.Medium"
            android:text="@string/tv_file_path"
            app:layout_widthPercent="30%"/>

        <TextView
            android:id="@+id/file_path_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_alignParentEnd="true"
            style="@style/MyTextTheme.Medium"
            app:layout_widthPercent="70%"/>
    </android.support.percent.PercentRelativeLayout>
    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/tv_file_size"
            style="@style/MyTextTheme.Medium"
            app:layout_widthPercent="30%" />

        <TextView
            android:id="@+id/file_size_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_alignParentEnd="true"
            style="@style/MyTextTheme.Medium"
            app:layout_widthPercent="70%"/>
    </android.support.percent.PercentRelativeLayout>
    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/tv_file_last_modified"
            style="@style/MyTextTheme.Medium"
            app:layout_widthPercent="30%" />

        <TextView
            android:id="@+id/file_last_modified_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_alignParentEnd="true"
            style="@style/MyTextTheme.Medium"
            app:layout_widthPercent="70%"/>
    </android.support.percent.PercentRelativeLayout>
</LinearLayout>